bin_PROGRAMS = agneauetloupself
agneauetloupself_SOURCES = agneauetloupself.c interface.c players_init.c unit_testing.c memory_management.c

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
agneauetloupself_LDFLAGS = $(all_libraries) 
noinst_HEADERS = projet.h prototypes.h structures.h unit_testing.h
